content paraphrasing, remainder task is to do privacy and terms

--- a/html/farestravelhub-com/about-us.html
+++ b/html/farestravelhub-com/about-us.html
@@ -35,7 +35,7 @@
     <nav class="navbar navbar-expand-lg navbar-light secondary-color">
         <div class="container" id="navContainer">
             <a class="navbar-brand" href="#">
-                <img src="img/farestravelhub/logo.png" class="img-fluid" alt="Fares Travel Hub">
+                <img src="img/farestravelhub/logo.png" class="img-fluid" alt="Airline Booking">
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -71,11 +71,11 @@
     <div class="container" id="aboutUsContainer">
         <h1 class="header">About Us</h1>
         <p class="body">
-            At <a href="https://farestravelhub.com/">Farestravelhub.com</a> we are committed to finding the best deals
-            for both international and domestic
-            travelers. Our flight reservation desk is here around the clock to assist you with all your flight
-            arrangements. So, whether you’re booking a flight, making a change to your booking, or cancelling
-            altogether, you can always rely on farestravelhub.com to help you save money on your next trip.
+            At <a href="https://airlinebooking.live/">Airlinebooking.live</a> we are dedicated to locating the most
+            cost-effective options for both international and domestic passengers. Our travel reservation department is
+            open 24 hours a day, 7 days a week to help you with all of your flight arrangements. You can always count on
+            airlinebooking.live to help you save money on your next trip, whether you're booking a ticket, making a
+            change to your booking, or cancelling it entirely.
         </p>
         <div class="row text-center">
             <div class="col-md-4">
@@ -94,8 +94,9 @@
                             <a class="link-replace text-uppercase">Easy-Booking</a>
                         </h4>
                         <!-- Text -->
-                        <p class="card-text">Get your e-ticket in less than <b>1 min</b>. Our sales experts have tickets
-                            ready for booking. By reaching out to us, you are guaranteed the fastest service possible.
+                        <p class="card-text">Get your e-ticket in less than <b>1 min</b>. Our sales representatives have
+                            tickets available for purchase. By contacting us, you may be certain of receiving the most
+                            expedient service available.
                         </p>
                     </div>
 
@@ -118,8 +119,8 @@
                             <a class="link-replace text-uppercase">Best Prices</a>
                         </h4>
                         <!-- Text -->
-                        <p class="card-text">Save money by working with one of our deal experts. Low-cost Flights, Plane
-                            Tickets, Specials, and the Lowest Prices are our specialty.</p>
+                        <p class="card-text">Working with one of our deal specialists can help you save money. We
+                            specialise in low-cost flights, plane tickets, specials, and the lowest prices.</p>
 
                     </div>
 
@@ -142,8 +143,8 @@
                             <a class="link-replace text-uppercase">Quick Services</a>
                         </h4>
                         <!-- Text -->
-                        <p class="card-text">With our assistance, passengers may save money on their flight
-                            reservations, make changes, or even cancel their trips altogether.</p>
+                        <p class="card-text">Passengers save money on their travel plans, make revisions, or even
+                            cancel their flights completely with our help.</p>
 
                     </div>
 
@@ -168,20 +169,19 @@
             </div>
             <div class="col-md-6 left-margin z-index-5 margin-top">
                 <div class="container-fluid about-us-blue">
-                    <p>Our search engine will provide you with all the necessary information about travel discounts. We
-                        have an incredible selection of airline connections and strong relationships man airline
-                        companies such as Southwest, JetBlue, Spirit, etc., to provide you with the best discounts for
-                        flight tickets. You can also take advantage of our exclusive deals on international travel. If
-                        you are frequently flying, you will fall in love with Airline Travel Support as we will provide
-                        exclusive deals just for you. We will simply need you to provide us with the necessary
-                        information about your travels – date, time, destination and class type so we can make all the
-                        needed arrangements on your behalf.</p>
-                    <p>You can always rely on our team to support you throughout your travels. Contact us if you feel
-                        busy, unable or just nervous to follow up issues with carriers. Just leave everything to us. Our
-                        team of professionals will resolve all your issues as soon as possible. We will take the stress
-                        of contacting the airline company off your shoulders. We will handle it for you whether you just
-                        have a query, an issue with your airline, or you simply want to make a change to your booking.
-                        You can always rely on Airline Travel Support to deal with all your issues.</p>
+                    <p>Our search engine will provide you all the information you need regarding travel deals. We have
+                        an outstanding assortment of airline connections and strong partnerships with airlines like as
+                        Southwest, JetBlue, Spirit, and others to provide you with the greatest flight ticket savings.
+                        You can also benefit from our exclusive foreign travel offers. If you fly regularly, you'll
+                        appreciate Airline Travel Support because we'll provide you exclusive offers specifically for
+                        you. Simply give us with the relevant information regarding your trip – date, time, destination,
+                        and class type – so that we can make all of the necessary preparations on your behalf.</p>
+                    <p>You can always count on our staff to assist you along your journey. If you're too busy,
+                        incapable, or scared to follow up with carriers, please contact us. Just hand it over to us. All
+                        of your problems will be resolved as quickly as possible by our team of experts. We will relieve
+                        you of the burden of contacting the airline company. Whether you have a question, an issue with
+                        your airline, or just want to make a modification to your ticket, we will handle it for you.
+                        You can always count on Airline Travel Support to solve your problems.</p>
                 </div>
             </div>
         </div>
@@ -189,22 +189,25 @@
         <div class="row no-gutters">
             <div class="col-md-6 right-margin margin-top z-index-5">
                 <div class="container-fluid about-us-blue">
-                    <p>Our customer support is on the line day and night, so do not hesitate to contact us whether it is
-                        early in the morning or late at night. We are committed to providing you with support, and this
-                        is our top priority. Our team of experts aims to ensure every single one of our customers is
-                        satisfied with our services and have a fantastic travelling experience.
+                    <p>Our customer service is available 24 hours a day, 7 days a week, so don't hesitate to reach out
+                        to us whether it's early in the morning or late at night. We are dedicated to providing you with
+                        assistance, and it is our first priority. Our team of specialists is dedicated to ensuring that
+                        each and every one of our clients is completely delighted with our services and has a wonderful
+                        travel experience.
                     </p>
                     <p>
-                        Welcome to <b>FARESTRAVELHUB.COM</b>, where we can offer you the best agreements for both
-                        domestic and international travellers. Our company works day-and-night to plan all your flight
-                        arrangements. You can trust farestravelhub.com whether you are booking a flight, making a change
-                        to your booking or cancelling it. We guarantee you will save a lot of money with our services.
+                        Welcome to <b>AIRLINEBOOKING.LIVE</b>, where we offer you the best deals for both
+                        domestic and international travellers. Our company works 24x7 to arrange all your flight
+                        itineraries. When booking a flight, modifying a booking or cancelling,
+                        airlinebooking.live can be trusted without a doubt. We not only guarantee you to save a lot of
+                        money with our services, but also the best industry customer service and peace of mind as well.
                     </p>
                 </div>
             </div>
             <div class="col-md-6 left-margin">
                 <div class="container-fluid">
-                    <img src="img/farestravelhub/popular-dest/golden-gate-bridge-1280.jpg" class="img-fluid" alt="San Francisco">
+                    <img src="img/farestravelhub/popular-dest/golden-gate-bridge-1280.jpg" class="img-fluid"
+                         alt="San Francisco">
                 </div>
             </div>
         </div>
@@ -219,8 +222,8 @@
                     <h1 class="header">24x7 Support</h1>
                 </div>
                 <div class="col-md-12">
-                    <p class="body">Make reservation from anywhere in the world. Call us 24/7 for advanced
-                        reservation.</p>
+                    <p class="body">Reserve from anywhere on the globe. For advanced reservations, call
+                        us 24 hours a day, 7 days a week.</p>
                 </div>
                 <div class="col-md-12">
                     <a class="btn call-btn number-replace" href="tel:18663701007">1 (866) 370-1007</a>
@@ -231,14 +234,14 @@
 </main>
 <footer id="footer" class="page-footer unique-color-dark pt-2">
     <div class="container text-center">
-        <p> © 2021 Fares travel hub - <span class="address-fill"></span></p>
+        <p> © 2021 Airline Booking - <span class="address-fill"></span></p>
         <p class="text-left">
-            Farestravelhub.com makes no assurance as to the correctness of any of the information, products,
-            or services found on its website. Farestravelhub.com is not liable for any inaccuracies or errors in
+            Airlinebooking.live makes no assurance as to the correctness of any of the information, products,
+            or services found on its website. Airlinebooking.live is not liable for any inaccuracies or errors in
             any description or information, which includes but is not limited to price and other information.
         </p>
         <p class="text-left">
-            At farestravelhub.com's discretion, any item of information may be edited or modified. This website
+            At airlinebooking.live's discretion, any item of information may be edited or modified. This website
             will give customers the option to either continue with their current reservation at the current rate
             or cancel their reservation with no cancellation fees if a published pricing is incorrect.
         </p>
@@ -276,7 +279,7 @@
                 <div class="row">
                     <div class="col-md-12">
                         <div class="header">
-                            <p class="p-odd">Contact  Us</p>
+                            <p class="p-odd">Contact Us</p>
                             <p><a class="btn call-btn number-replace"
                                   href="tel:18663701007">1 (866) 370-1007</a></p>
                         </div>
