--- a/html/farestravelhub-com/contact-us.html
+++ b/html/farestravelhub-com/contact-us.html
@@ -35,7 +35,7 @@
     <nav class="navbar navbar-expand-lg navbar-light secondary-color">
         <div class="container" id="navContainer">
             <a class="navbar-brand" href="#">
-                <img src="img/farestravelhub/logo.png" class="img-fluid" alt="Fares travel hub">
+                <img src="img/farestravelhub/logo.png" class="img-fluid" alt="Airline Booking">
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -93,8 +93,9 @@
                             <a class="link-replace text-uppercase">Easy-Booking</a>
                         </h4>
                         <!-- Text -->
-                        <p class="card-text">Get your e-ticket in less than <b>1 min</b>. Our sales experts have tickets
-                            ready for booking. By reaching out to us, you are guaranteed the fastest service possible.
+                        <p class="card-text">Get your e-ticket in less than <b>1 min</b>. Our sales representatives have
+                            tickets available for purchase. By contacting us, you may be certain of receiving the most
+                            expedient service available.
                         </p>
                     </div>
 
@@ -117,8 +118,8 @@
                             <a class="link-replace text-uppercase">Best Prices</a>
                         </h4>
                         <!-- Text -->
-                        <p class="card-text">Save money by working with one of our deal experts. Low-cost Flights, Plane
-                            Tickets, Specials, and the Lowest Prices are our specialty.</p>
+                        <p class="card-text">Working with one of our deal specialists can help you save money. We
+                            specialise in low-cost flights, plane tickets, specials, and the lowest prices.</p>
 
                     </div>
 
@@ -141,8 +142,8 @@
                             <a class="link-replace text-uppercase">Quick Services</a>
                         </h4>
                         <!-- Text -->
-                        <p class="card-text">With our assistance, passengers may save money on their flight
-                            reservations, make changes, or even cancel their trips altogether.</p>
+                        <p class="card-text">Passengers save money on their travel plans, make revisions, or even
+                            cancel their flights completely with our help.</p>
 
                     </div>
 
@@ -159,7 +160,8 @@
                     <h1 class="header">24x7 Support</h1>
                 </div>
                 <div class="col-md-12">
-                    <p class="body">Make reservation from anywhere in the world. Call us 24/7 for advanced reservation.</p>
+                    <p class="body">Reserve from anywhere on the globe. For advanced reservations, call
+                        us 24 hours a day, 7 days a week.</p>
                 </div>
                 <div class="col-md-12">
                     <a class="btn call-btn number-replace" href="tel:18663701007">1 (866) 370-1007</a>
@@ -170,14 +172,14 @@
 </main>
 <footer id="footer" class="page-footer unique-color-dark pt-2">
     <div class="container text-center">
-        <p> © 2021 Fares travel hub - <span class="address-fill"></span></p>
+        <p> © 2021 Airline Booking - <span class="address-fill"></span></p>
         <p class="text-left">
-            Farestravelhub.com makes no assurance as to the correctness of any of the information, products,
-            or services found on its website. Farestravelhub.com is not liable for any inaccuracies or errors in
+            Airlinebooking.live makes no assurance as to the correctness of any of the information, products,
+            or services found on its website. Airlinebooking.live is not liable for any inaccuracies or errors in
             any description or information, which includes but is not limited to price and other information.
         </p>
         <p class="text-left">
-            At Farestravelhub.com's discretion, any item of information may be edited or modified. This website
+            At Airlinebooking.live's discretion, any item of information may be edited or modified. This website
             will give customers the option to either continue with their current reservation at the current rate
             or cancel their reservation with no cancellation fees if a published pricing is incorrect.
         </p>
@@ -215,7 +217,7 @@
                 <div class="row">
                     <div class="col-md-12">
                         <div class="header">
-                            <p class="p-odd">Contact  Us</p>
+                            <p class="p-odd">Contact Us</p>
                             <p><a class="btn call-btn number-replace"
                                   href="tel:18663701007">1 (866) 370-1007</a></p>
                         </div>
