--- a/html/farestravelhub-com/index.html
+++ b/html/farestravelhub-com/index.html
@@ -142,11 +142,11 @@
         <hr class="hr-light my-1">
         <div class="row">
             <div class="col-md-12">
-                <p class="small font-italic">At FARESTRAVELHUB.COM we are committed to finding the best deals for both
+                <p class="small font-italic">At AIRLINEBOOKING.LIVE we are committed to finding the best deals for both
                     international and domestic
                     travelers. Our flight reservation desk is here around the clock to assist you with all your flight
                     arrangements. So, whether you’re booking a flight, making a change to your booking, or cancelling
-                    altogether, you can always rely on farestravelhub.com to help you save money on your next trip.</p>
+                    altogether, you can always rely on airlinebooking.live to help you save money on your next trip.</p>
             </div>
         </div>
     </div>
@@ -158,9 +158,9 @@
                 <div class="container-plain">
                     <h1 class="header">Modifications And Refunds</h1>
                     <p class="body">Modifying/Cancelling your booking</p>
-                    <p class="body">If you need to make changes to your reservation, we recommend that you go to the
-                        airline's official website or mobile phone app. You may also have Airline Travel Support do it
-                        for you.
+                    <p class="body">We recommend going to the airline's official site or app if you need
+                        to make changes to your reservation. You might also hire Airline Travel Support to take care of
+                        things for you.
                     </p>
                 </div>
             </div>
@@ -168,15 +168,12 @@
                 <div class="container-blue">
                     <h1 class="header">Getting a refund</h1>
                     <p class="body">
-                        You may be able to get a refund or a partial refund in the event of cancellation. Depending on
-                        the
-                        type of flight ticket you have booked, you will get its entire cost refunded to the original
-                        payment
-                        method, or it will be credited to your airline account as flight points. We highly recommend you
-                        to
-                        contact Airline Travel Support, where real experts deal with customer service agents. We will do
-                        our
-                        best to secure a refund during our communications with the airline.
+                        In the event of cancellation, you may be eligible for a full or partial refund. Depending on the
+                        kind of flight ticket you purchased, you will either get a full refund to your original payment
+                        method or flight points will be applied to your airline account. We strongly advise you to call
+                        Airline Travel Support, where you will be dealing with genuine professionals rather than
+                        customer service representatives. During our interactions with the airline, we will try our
+                        utmost to achieve a reimbursement.
                     </p>
                 </div>
             </div>
@@ -186,20 +183,20 @@
             <div class="col-md-6">
                 <div class="container-blue">
                     <h1 class="header">Airline Reservation</h1>
-                    <p class="body"> We are working with multiple airlines to offer a wide range of services such as
-                        transport, accommodation, cruises, holiday packages, and more. We are affiliated with airline
-                        companies such as Delta Airlines and United Airlines that can provide you with one-way, round
-                        trip and multi-city tickets. Do not hesitate to contact us if you are looking to book a flight
-                        with either of these airline companies.
+                    <p class="body"> We collaborate with a number of airlines to provide a variety of services,
+                        including transportation, lodging, cruises, vacation packages, and more. We work with a number
+                        of airlines, including Delta Airlines and United Airlines, to provide one-way, round-trip, and
+                        multi-city tickets. If you want to book a flight with one of these airlines, please do not
+                        hesitate to contact us.
                     </p>
                 </div>
             </div>
             <div class="col-md-6">
                 <div class="container-plain">
                     <h1 class="header">Baggage Information</h1>
-                    <p class="body">As you may already know, most airlines have a free hand luggage policy that allows
-                        passengers to take a small briefcase, purse, laptop or backpack on board, free of charge. Please
-                        get in touch with our Airline Travel Support for more information regarding baggage policies.
+                    <p class="body">Most airlines, as you may know, offer a free hand baggage policy that allows
+                        travellers to bring a small briefcase, handbag, laptop, or backpack on board for free. For
+                        additional information on luggage policies, please contact our Airline Travel Support team.
                     </p>
                 </div>
             </div>
@@ -209,10 +206,10 @@
             <div class="col-md-6">
                 <div class="container-plain">
                     <h1 class="header">Onboard Services</h1>
-                    <p class="body">There are plenty of onboard services such as meals and flight entertainment like
-                        movies, magazines and wi-fi available to all airline passengers for free. These onboard services
-                        may differ from one airline to another, so contact us immediately to find out what will be
-                        available to you on your flight.
+                    <p class="body">All airline passengers have access to complimentary onboard amenities such as meals
+                        and in-flight entertainment such as movies, magazines, and Wi-Fi. These onboard services may
+                        change from one airline to the next, so contact us as soon as possible to find out what will be
+                        available on your journey.
                     </p>
                 </div>
             </div>
@@ -220,10 +217,11 @@
                 <div class="container-blue">
                     <h1 class="header">Flight Delay And Cancellation</h1>
                     <p class="body">
-                        It can rarely happen for a flight to be cancelled or delayed. However, in such cases, airline
-                        companies may book you onto the next available flight or accommodate you in another way. Even
-                        though this is extremely rare, it is not impossible. Most airlines will usually provide their
-                        passengers with a full refund or some compensation for the inconvenience.
+                        A flight being cancelled or delayed is an uncommon occurrence. Airlines, on the other hand, may
+                        book you on the next available flight or accommodate you in another way in such instances. Even
+                        while this is exceedingly unlikely, it is not out of the realm of possibility. Most airlines
+                        will provide a full refund or some form of compensation to passengers who have been
+                        inconvenienced.
                     </p>
                 </div>
             </div>
@@ -240,19 +238,18 @@
                 <div class="container">
                     <h1 class="header">Boarding Process </h1>
                     <div class="underline-holder"><span></span></div>
-                    <p> Usually, passengers are divided into groups based on their flight ticket number. Always stay
-                        alert for announcements when boarding and follow the instructions when your group is called for
-                        a smooth transition from airport to onboard.
+                    <p> Passengers are usually separated into groups depending on the number on their airline ticket.
+                        When boarding, keep alert for announcements and follow the instructions when your group is
+                        called for a seamless transfer from the airport to the plane.
                     </p>
                     <h1 class="header">Documentation Required</h1>
                     <div class="underline-holder"><span></span></div>
                     <p>
-                        Do not forget to bring your government-issued photo ID with you when you show your flight
-                        ticket. You will need it to be confirmed by the airport security staff and by the airline at the
-                        check-in counter so that you can receive a boarding pass. The only ID that will be accepted for
-                        international flights at the airport is your passport. In case you are travelling with a
-                        newborn, do not forget to bring their birth certificate as it will serve as their only valid
-                        form of ID.
+                        When you display your airline ticket, don't forget to carry your government-issued picture ID.
+                        It must be validated by airport security and the airline at the check-in desk in order for you
+                        to acquire a boarding card. Your passport is the only form of identification that will be
+                        accepted at the airport for international flights. If you're travelling with a baby, don't
+                        forget to carry their birth certificate, since it will be their sole form of identification.
                     </p>
                 </div>
             </div>
@@ -261,23 +258,23 @@
         <div class="row">
             <div class="col-md-6 d-flex">
                 <div class="container">
-                    <h1 class="header">Why Farestravelhub?</h1>
+                    <h1 class="header">Why AirlineBooking.live?</h1>
                     <div class="underline-holder"><span></span></div>
                     <h2 class="header-2">Around-the-Clock Support</h2>
-                    <p> We are available day and night to offer you our services. We can help you find a nice hotel,
-                        book a taxi, or something else. Please do not hesitate to contact Airline Travel Support with
-                        any query or issue immediately.
+                    <p> We are here to assist you at all hours of the day and night. We can assist you in finding a
+                        decent hotel, booking a cab, and other services. If you have any questions or concerns, please
+                        contact Airline Travel Support right away.
                     </p>
                     <h2 class="header-2">Reasonable Price</h2>
                     <p>
-                        We have a straightforward pricing structure so that our customers can enjoy low fares and
-                        benefit from all our fair deals and discounts.
+                        We offer a simple price structure so that our consumers may take advantage of affordable fares
+                        and all of our fair deals and discounts.
                     </p>
                     <h2 class="header-2">Customer First</h2>
                     <p>
-                        Our top priority at Airline Travel Support will always be to satisfy our customers’ needs. We
-                        want to make them feel safe and make them know that we will do our best to meet their highest
-                        demands no matter the circumstances.
+                        At Airline Travel Support, our first goal will always be to meet the demands of our clients. We
+                        want them to feel protected, and we want them to know that no matter what, we will do everything
+                        we can to satisfy their greatest expectations.
                     </p>
                 </div>
             </div>
@@ -307,14 +304,14 @@
 </main>
 <footer id="footer" class="page-footer unique-color-dark pt-2">
     <div class="container text-center">
-        <p> © 2021 Fares Travel Hub - <span class="address-fill"></span></p>
+        <p> © 2022 Airline Booking - <span class="address-fill"></span></p>
         <p class="text-left">
-            Farestravelhub.com makes no assurance as to the correctness of any of the information, products,
-            or services found on its website. <b>Farestravelhub.com</b> is not liable for any inaccuracies or errors in
+            Airlinebooking.live makes no assurance as to the correctness of any of the information, products,
+            or services found on its website. <b>Airlinebooking.live</b> is not liable for any inaccuracies or errors in
             any description or information, which includes but is not limited to price and other information.
         </p>
         <p class="text-left">
-            At farestravelhub.com's discretion, any item of information may be edited or modified. This website
+            At airlinebooking.live's discretion, any item of information may be edited or modified. This website
             will give customers the option to either continue with their current reservation at the current rate
             or cancel their reservation with no cancellation fees if a published pricing is incorrect.
         </p>
@@ -352,7 +349,7 @@
                 <div class="row">
                     <div class="col-md-12">
                         <div class="header">
-                            <p class="p-odd">Contact  Us</p>
+                            <p class="p-odd">Contact Us</p>
                             <p><a class="btn call-btn number-replace"
                                   href="tel:18663701007">1 (866) 370-1007</a></p>
                         </div>
