--- a/html/farestravelhub-com/privacy.html
+++ b/html/farestravelhub-com/privacy.html
@@ -36,7 +36,7 @@
         <div class="container">
             <a class="navbar-brand" href="#">
                 <img src="img/farestravelhub/logo.png" class="img-fluid" style="max-width: 25%; border-radius: .25rem;"
-                     alt="Fares travel hub">
+                     alt="Airline Booking">
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -76,7 +76,7 @@
                 We use your Personal Information for providing and improving the Service. By using the Service, you
                 agree to the collection and use of information in accordance with this policy. Unless otherwise defined
                 in this Privacy Policy, terms used in this Privacy Policy have the same meanings as in our Terms and
-                Conditions, accessible at https://farestravelhub.com</p>
+                Conditions, accessible at https://airlinebooking.live</p>
 
             <h1>Information Collection And Use</h1>
             <p>While using our Service, we may ask you to provide us with certain personally identifiable information
@@ -153,14 +153,14 @@
 </main>
 <footer id="footer" class="page-footer unique-color-dark pt-2">
     <div class="container text-center">
-        <p> © 2021 Fares travel hub - <span class="address-fill"></span></p>
+        <p> © 2021 Airline Booking - <span class="address-fill"></span></p>
         <p class="text-left">
-            Farestravelhub.com makes no assurance as to the correctness of any of the information, products,
-            or services found on its website. Farestravelhub.com is not liable for any inaccuracies or errors in
+            Airlinebooking.live makes no assurance as to the correctness of any of the information, products,
+            or services found on its website. Airlinebooking.live is not liable for any inaccuracies or errors in
             any description or information, which includes but is not limited to price and other information.
         </p>
         <p class="text-left">
-            At Farestravelhub.com's discretion, any item of information may be edited or modified. This website
+            At Airlinebooking.live's discretion, any item of information may be edited or modified. This website
             will give customers the option to either continue with their current reservation at the current rate
             or cancel their reservation with no cancellation fees if a published pricing is incorrect.
         </p>
