--- a/html/farestravelhub-com/terms.html
+++ b/html/farestravelhub-com/terms.html
@@ -36,7 +36,7 @@
         <div class="container">
             <a class="navbar-brand" href="#">
                 <img src="img/farestravelhub/logo.png" class="img-fluid" style="max-width: 25%; border-radius: .25rem;"
-                     alt="Fares travel hub">
+                     alt="Airline Booking">
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -65,7 +65,7 @@
             <span>by Rono / February 12, 2022</span>
             <p>Last updated: February 12, 2022
             <p>Please read these Terms of Use (“Terms”, “Terms of Use”) carefully before using the
-            <p>https://farestravelhub.com website (the “Service”) operated by (“us”, “we”, or “our”).
+            <p>https://airlinebooking.live website (the “Service”) operated by (“us”, “we”, or “our”).
 
             <p>Your access to and use of the Service is conditioned on your acceptance of and compliance with these
                 Terms. These Terms apply to all visitors, users and others who access or use the Service.</p>
@@ -130,14 +130,14 @@
 </main>
 <footer id="footer" class="page-footer unique-color-dark pt-2">
     <div class="container text-center">
-        <p> © 2021 Fares travel hub - <span class="address-fill"></span></p>
+        <p> © 2021 Airline Booking - <span class="address-fill"></span></p>
         <p class="text-left">
-            Farestravelhub.com makes no assurance as to the correctness of any of the information, products,
-            or services found on its website. Farestravelhub.com is not liable for any inaccuracies or errors in
+            Airlinebooking.live makes no assurance as to the correctness of any of the information, products,
+            or services found on its website. Airlinebooking.live is not liable for any inaccuracies or errors in
             any description or information, which includes but is not limited to price and other information.
         </p>
         <p class="text-left">
-            At Farestravelhub.com's discretion, any item of information may be edited or modified. This website
+            At Airlinebooking.live's discretion, any item of information may be edited or modified. This website
             will give customers the option to either continue with their current reservation at the current rate
             or cancel their reservation with no cancellation fees if a published pricing is incorrect.
         </p>
